test/signal/negative/global_graph_positive.ml
module Observer_error = struct
  type t = |

  let pp _ppf (value : t) = match value with _ -> .
end

module Signal = Eta_signal.Make (Observer_error) ()

let _ok = Signal.Var.create 1
